# sample-adh-authentication_client_credentials_simple-rust

./: .gitignore  Cargo.toml  HISTORY.md  README.md  appsettings.placeholder.json  azure-pipeline.yml
.github/: dependabot.yml
src/: main.rs
